--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-28 16:01+0300\n"
+"POT-Creation-Date: 2024-10-28 17:05+0300\n"
 "PO-Revision-Date: 2024-10-28 16:18+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -168,7 +168,11 @@ msgstr "Article cannot be empty"
 #: bill/views/bills/speedup_bill.py:127 bill/views/bills/speedup_bill.py:134
 #: bill/views/bills/speedup_bill.py:141 bill/views/bills/speedup_bill.py:148
 #: bill/views/bills/speedup_bill.py:155 bill/views/bills/speedup_bill.py:162
-#: bill/views/bills/speedup_bill.py:170 chat/templates/chat/dialogue.html:212
+#: bill/views/bills/speedup_bill.py:170 bill/views/bills/vote_bill.py:64
+#: bill/views/bills/vote_bill.py:90 bill/views/bills/vote_bill.py:97
+#: bill/views/bills/vote_bill.py:104 bill/views/bills/vote_bill.py:111
+#: bill/views/bills/vote_bill.py:118 bill/views/bills/vote_bill.py:125
+#: bill/views/bills/vote_bill.py:133 chat/templates/chat/dialogue.html:212
 #: chat/views/buy_sticker_pack.py:24 chat/views/buy_sticker_pack.py:36
 #: chat/views/buy_sticker_pack.py:47 chat/views/buy_sticker_pack.py:55
 #: chat/views/buy_sticker_pack.py:90
@@ -200,6 +204,14 @@ msgstr "Article cannot be empty"
 #: gov/views/set_ministers.py:62 gov/views/set_ministers.py:83
 #: gov/views/set_ministers.py:93 gov/views/set_ministers.py:183
 #: gov/views/switch_description.py:24 gov/views/switch_description.py:42
+#: party/primaries/views/vote_primaries.py:28
+#: party/primaries/views/vote_primaries.py:37
+#: party/primaries/views/vote_primaries.py:46
+#: party/primaries/views/vote_primaries.py:57
+#: party/primaries/views/vote_primaries.py:68
+#: party/primaries/views/vote_primaries.py:77
+#: party/primaries/views/vote_primaries.py:86
+#: party/primaries/views/vote_primaries.py:107
 #: party/views/management/color_change.py:38
 #: party/views/management/color_change.py:54
 #: party/views/management/color_change.py:61
@@ -228,6 +240,7 @@ msgstr "Article cannot be empty"
 #: party/views/management/roles/set_role.py:52
 #: party/views/management/roles/set_role.py:59
 #: party/views/management/roles/set_role.py:66
+#: party/views/management/roles/set_role.py:74
 #: party/views/management/staff/leave_party.py:38
 #: party/views/management/staff/leave_party.py:210 player/player.py:392
 #: player/player.py:403 player/player.py:424 player/views/answer_captcha.py:35
@@ -265,9 +278,9 @@ msgstr "Article cannot be empty"
 #: player/views/customization/plane/set_plane_nick.py:58
 #: player/views/customization/plane/set_plane_nick.py:73
 #: player/views/customization/plane/set_plane_nick.py:82
-#: player/views/expense_energy.py:30 player/views/expense_energy.py:44
-#: player/views/expense_energy.py:67 player/views/expense_energy.py:76
-#: player/views/expense_energy.py:87 player/views/full_auto_allow.py:43
+#: player/views/expense_energy.py:30 player/views/expense_energy.py:43
+#: player/views/expense_energy.py:65 player/views/expense_energy.py:73
+#: player/views/expense_energy.py:83 player/views/full_auto_allow.py:43
 #: player/views/full_auto_allow.py:59 player/views/new_player.py:181
 #: player/views/new_player.py:194 player/views/open_lootboxes.py:27
 #: player/views/open_lootboxes.py:38 player/views/open_lootboxes.py:49
@@ -332,6 +345,9 @@ msgstr "Article cannot be empty"
 #: storage/views/storage/new_storage.py:63
 #: storage/views/storage/new_storage.py:83
 #: storage/views/storage/new_storage.py:106
+#: storage/views/storage/storage_status.py:58
+#: storage/views/storage/storage_status.py:72
+#: storage/views/storage/storage_status.py:98
 #: storage/views/storage/upgrade_storage.py:38
 #: storage/views/storage/upgrade_storage.py:48
 #: storage/views/storage/upgrade_storage.py:61
@@ -522,7 +538,7 @@ msgstr "Party"
 
 #: article/views/change_article.py:23 article/views/change_article.py:34
 #: article/views/change_article.py:42 article/views/change_article.py:54
-#: article/views/change_article.py:74
+#: article/views/change_article.py:74 bill/views/bills/vote_bill.py:132
 msgctxt "change_article"
 msgid "Редактировать статью"
 msgstr "Edit article"
@@ -550,14 +566,16 @@ msgstr "The text of the article should not be empty"
 #: article/views/change_article.py:73 article/views/create_article.py:118
 #: article/views/subscription.py:71 article/views/vote_article.py:73
 #: bill/views/bills/cancel_bill.py:113 bill/views/bills/new_bill.py:77
-#: chat/views/buy_sticker_pack.py:88
+#: bill/views/bills/vote_bill.py:131 chat/views/buy_sticker_pack.py:88
 #: chat/views/messages/get_message_block.py:84
 #: event/views/activate_invite.py:114 factory/views/cancel_auto.py:35
-#: factory/views/start_auto.py:142 player/views/change_bio.py:32
-#: player/views/change_nickname.py:63 player/views/skills/boost_skill.py:166
-#: player/views/skills/up_skill.py:190 skill/views/skill_cancel.py:98
-#: state/views/set_mandate.py:78 state/views/state_foundation.py:109
-#: storage/views/auctions/set_bet.py:159 war/views/start_war.py:102
+#: factory/views/start_auto.py:142 party/primaries/views/vote_primaries.py:105
+#: party/views/management/roles/set_role.py:75 player/views/change_bio.py:32
+#: player/views/change_nickname.py:63 player/views/expense_energy.py:81
+#: player/views/skills/boost_skill.py:166 player/views/skills/up_skill.py:190
+#: skill/views/skill_cancel.py:98 state/views/set_mandate.py:78
+#: state/views/state_foundation.py:109 storage/views/auctions/set_bet.py:159
+#: war/views/start_war.py:102
 msgctxt "core"
 msgid "Ошибка типа запроса"
 msgstr "Request type error"
@@ -1952,6 +1970,73 @@ msgctxt "core"
 msgid "Ошибка метода"
 msgstr "Method error"
 
+#: bill/views/bills/vote_bill.py:62
+#, fuzzy
+#| msgctxt "speedup_bill"
+#| msgid "Надо проголосовать!"
+msgctxt "vote_bill"
+msgid "Надо проголосовать!"
+msgstr "We need to vote!"
+
+#: bill/views/bills/vote_bill.py:63 bill/views/bills/vote_bill.py:89
+#: bill/views/bills/vote_bill.py:96 bill/views/bills/vote_bill.py:103
+#: bill/views/bills/vote_bill.py:110 bill/views/bills/vote_bill.py:117
+#: bill/views/bills/vote_bill.py:124
+#, fuzzy
+#| msgctxt "goods"
+#| msgid "Оборудование"
+msgctxt "vote_bill"
+msgid "Голосование"
+msgstr "Equipment"
+
+#: bill/views/bills/vote_bill.py:88
+#, fuzzy
+#| msgctxt "speedup_bill"
+#| msgid "Надо проголосовать!"
+msgctxt "vote_bill"
+msgid "Вы уже проголосовали"
+msgstr "We need to vote!"
+
+#: bill/views/bills/vote_bill.py:95
+#, fuzzy
+#| msgctxt "cancel_bill"
+#| msgid "Нет такого законопроекта"
+msgctxt "vote_bill"
+msgid "Нет такого законопроекта"
+msgstr "There is no such bill"
+
+#: bill/views/bills/vote_bill.py:102
+#, fuzzy
+#| msgctxt "cancel_bill"
+#| msgid "Нет такого вида законопроекта"
+msgctxt "vote_bill"
+msgid "Нет такого вида законопроекта"
+msgstr "There is no such type of bill"
+
+#: bill/views/bills/vote_bill.py:109
+#, fuzzy
+#| msgctxt "cancel_bill"
+#| msgid "Вы - не депутат этого парламента"
+msgctxt "vote_bill"
+msgid "Вы - не депутат этого парламента"
+msgstr "You are not a member of this parliament"
+
+#: bill/views/bills/vote_bill.py:116
+#, fuzzy
+#| msgctxt "cancel_bill"
+#| msgid "В этом государстве нет парламента"
+msgctxt "vote_bill"
+msgid "В этом государстве нет парламента"
+msgstr "There is no parliament in this state"
+
+#: bill/views/bills/vote_bill.py:123
+#, fuzzy
+#| msgctxt "cancel_bill"
+#| msgid "В этом регионе нет государства"
+msgctxt "vote_bill"
+msgid "В этом регионе нет государства"
+msgstr "There is no state in this region"
+
 #: chat/comment_consumers.py:24 chat/consumers.py:73
 msgctxt "chat"
 msgid "Успешно заблокирован"
@@ -2987,6 +3072,68 @@ msgctxt "party_view"
 msgid "Частная"
 msgstr "Private"
 
+#: party/primaries/views/vote_primaries.py:27
+#: party/primaries/views/vote_primaries.py:36
+#: party/primaries/views/vote_primaries.py:45
+#: party/primaries/views/vote_primaries.py:56
+#: party/primaries/views/vote_primaries.py:67
+#: party/primaries/views/vote_primaries.py:76
+#: party/primaries/views/vote_primaries.py:85
+#: party/primaries/views/vote_primaries.py:106
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "vote_primaries"
+msgid "Голосование на праймериз"
+msgstr "Energy refill"
+
+#: party/primaries/views/vote_primaries.py:29
+#, fuzzy
+#| msgctxt "new_bill"
+#| msgid "ID товара должен быть целым числом"
+msgctxt "vote_primaries"
+msgid "ID партии должен быть целым числом"
+msgstr "Good ID must be an integer"
+
+#: party/primaries/views/vote_primaries.py:38
+#, fuzzy
+#| msgctxt "no_party"
+#| msgid "Вы не состоите в партии"
+msgctxt "vote_primaries"
+msgid "Вы не состоите в этой партии"
+msgstr "You are not a member of any party"
+
+#: party/primaries/views/vote_primaries.py:47
+#, fuzzy
+#| msgctxt "game_event"
+#| msgid "Активация приглашения"
+msgctxt "vote_primaries"
+msgid "Активных праймериз нет"
+msgstr "Activate invitation"
+
+#: party/primaries/views/vote_primaries.py:58
+#, fuzzy
+#| msgctxt "start_fly"
+#| msgid "Вы уже в полёте"
+msgctxt "vote_primaries"
+msgid "Вы уже голосовали"
+msgstr "You are already in flight"
+
+#: party/primaries/views/vote_primaries.py:69
+#: party/primaries/views/vote_primaries.py:78
+#, fuzzy
+#| msgctxt "new_bill"
+#| msgid "Нельзя напасть на самих себя"
+msgctxt "vote_primaries"
+msgid "Нельзя голосовать за себя"
+msgstr "You can't attack yourself"
+
+#: party/primaries/views/vote_primaries.py:87
+#, fuzzy
+#| msgid "Такого склада у вас нет"
+msgctxt "vote_primaries"
+msgid "Такого кандидата в партии нет"
+msgstr "You don't have such a warehouse"
+
 #: party/templates/party/redesign/lists/party_history_list.html:19
 msgctxt "party_hist"
 msgid "партия"
@@ -3687,6 +3834,7 @@ msgstr "There can only be one leader per party"
 #: party/views/management/roles/set_role.py:51
 #: party/views/management/roles/set_role.py:58
 #: party/views/management/roles/set_role.py:65
+#: party/views/management/roles/set_role.py:73
 msgctxt "has_party"
 msgid "Смена должности"
 msgstr "Position changing"
@@ -5402,13 +5550,11 @@ msgstr "Nickname hasn't changed"
 msgid "Скрыть кнопку Wiki"
 msgstr "Hide Wiki button"
 
-#: player/views/claim_reward.py:83 player/views/expense_energy.py:85
+#: player/views/claim_reward.py:83
 msgid "Ошибка типа запроса"
 msgstr "Request type error"
 
-#: player/views/claim_reward.py:84 player/views/expense_energy.py:29
-#: player/views/expense_energy.py:43 player/views/expense_energy.py:66
-#: player/views/expense_energy.py:75 player/views/expense_energy.py:86
+#: player/views/claim_reward.py:84
 msgid "Пополнение энергии"
 msgstr "Energy refill"
 
@@ -5541,15 +5687,41 @@ msgstr "The specified aircraft does not belong to you"
 msgid "Выбор авиации"
 msgstr "Aviation select"
 
-#: player/views/expense_energy.py:42
+#: player/views/expense_energy.py:28
+#, fuzzy
+#| msgctxt "skills"
+#| msgid "Отсутствует обязательный аргумент запроса"
+msgctxt "expense_energy"
+msgid "Отсутствует обязательный аргумент запроса"
+msgstr "A required request argument is missing"
+
+#: player/views/expense_energy.py:29 player/views/expense_energy.py:42
+#: player/views/expense_energy.py:64 player/views/expense_energy.py:72
+#: player/views/expense_energy.py:82
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "expense_energy"
+msgid "Пополнение энергии"
+msgstr "Energy refill"
+
+#: player/views/expense_energy.py:41
+#, fuzzy
+#| msgid "Десять минут ещё не прошло"
+msgctxt "expense_energy"
 msgid "Десять минут ещё не прошло"
 msgstr "Ten minutes have not yet passed"
 
-#: player/views/expense_energy.py:65
+#: player/views/expense_energy.py:63
+#, fuzzy
+#| msgid "Пополнение энергии не требуется"
+msgctxt "expense_energy"
 msgid "Пополнение энергии не требуется"
 msgstr "Energy refill is not required"
 
-#: player/views/expense_energy.py:74
+#: player/views/expense_energy.py:71
+#, fuzzy
+#| msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
+msgctxt "expense_energy"
 msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
 msgstr "Not enough Energy drinks. Create them at the Storage tab of Warehouse"
 
@@ -8347,6 +8519,44 @@ msgstr "Not enough resource: "
 msgctxt "storage"
 msgid "Недостаточно денег на транспортировку"
 msgstr "Not enough money for transportation"
+
+#: storage/views/storage/storage_status.py:56
+#, fuzzy
+#| msgctxt "choose_plane"
+#| msgid "Указанный самолёт вам не принадлежит"
+msgctxt "storage_status"
+msgid "Склад с указанным ID не существует или не принадлежит вам"
+msgstr "The specified aircraft does not belong to you"
+
+#: storage/views/storage/storage_status.py:57
+#: storage/views/storage/storage_status.py:97
+#, fuzzy
+#| msgctxt "storage_upgrade"
+#| msgid "Улучшение склада"
+msgctxt "storage_status"
+msgid "Данные склада"
+msgstr "Warehouse upgrade"
+
+#: storage/views/storage/storage_status.py:70
+#, fuzzy
+#| msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
+msgctxt "storage_status"
+msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
+msgstr "Not enough Energy drinks. Create them at the Storage tab of Warehouse"
+
+#: storage/views/storage/storage_status.py:71
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "storage_status"
+msgid "Пополнение энергии"
+msgstr "Energy refill"
+
+#: storage/views/storage/storage_status.py:96
+#, fuzzy
+#| msgid "Некорректный запрос"
+msgctxt "storage_status"
+msgid "Некорректный параметр"
+msgstr "Incorrect request"
 
 #: storage/views/storage/upgrade_storage.py:37
 #: storage/views/storage/upgrade_storage.py:47
