--- a/locale/sr/LC_MESSAGES/django.po
+++ b/locale/sr/LC_MESSAGES/django.po
@@ -6,97 +6,98 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-28 17:05+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2024-10-28 19:29+0300\n"
+"PO-Revision-Date: 2024-10-28 19:30+0300\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
+"X-Generator: Poedit 3.4.4\n"
 
 #: article/templates/article/article.html:16
 #: article/templates/article/article.html:110
 msgctxt "article"
 msgid "подписаться"
-msgstr ""
+msgstr "претплатити се"
 
 #: article/templates/article/article.html:17
 #: article/templates/article/article.html:110
 msgctxt "article"
 msgid "отписаться"
-msgstr ""
+msgstr "отјавити се"
 
 #: article/templates/article/article.html:107
 msgctxt "article"
 msgid "редактировать"
-msgstr ""
+msgstr "уредити"
 
 #: article/templates/article/article.html:153
 #: article/templates/article/article.html:384
 msgctxt "article"
 msgid "статья"
-msgstr ""
+msgstr "чланак"
 
 #: article/templates/article/article.html:171
 #: article/templates/article/article.html:402
 msgctxt "article"
 msgid "комментарии"
-msgstr ""
+msgstr "коментари"
 
 #: article/templates/article/article.html:344
 #: chat/templates/chat/dialogue.html:160
 #: player/templates/player/redesign/overview.html:1018
 msgctxt "overview"
 msgid "У вас пока еще нет стикеров"
-msgstr ""
+msgstr "Још увек немате налепнице"
 
 #: article/templates/article/article.html:357
 #: chat/templates/chat/dialogue.html:173
 #: player/templates/player/redesign/overview.html:1031
 msgctxt "overview"
 msgid "магазин"
-msgstr ""
+msgstr "продавница"
 
 #: article/templates/article/articles.html:29 article/views/articles.py:123
 msgctxt "article"
 msgid "Статьи"
-msgstr ""
+msgstr "Чланци"
 
 #: article/templates/article/articles.html:42
 msgctxt "article"
 msgid "все"
-msgstr ""
+msgstr "све"
 
 #: article/templates/article/articles.html:43
 msgctxt "article"
 msgid "лучшие"
-msgstr ""
+msgstr "најбољи"
 
 #: article/templates/article/articles.html:44
 msgctxt "article"
 msgid "подписки"
-msgstr ""
+msgstr "претплате"
 
 #: article/templates/article/character_articles.html:15
 msgctxt "articles_list"
 msgid "Статьи"
-msgstr ""
+msgstr "Чланци"
 
 #: article/templates/article/edit_article.html:12
 msgctxt "article"
 msgid "Редактировать статью"
-msgstr ""
+msgstr "Уредити чланак"
 
 #: article/templates/article/edit_article.html:13
 #: article/templates/article/new_article.html:13
 msgctxt "article"
 msgid "Статья не может быть пустой"
-msgstr ""
+msgstr "Чланак не може бити празан"
 
 #: article/templates/article/edit_article.html:14
 #: article/templates/article/new_article.html:14
@@ -433,38 +434,38 @@ msgstr ""
 #: war/views/switch_war_visibility.py:92
 msgctxt "core"
 msgid "Закрыть"
-msgstr ""
+msgstr "Затворити"
 
 #: article/templates/article/edit_article.html:51
 msgctxt "article"
 msgid "обновить"
-msgstr ""
+msgstr "освежити"
 
 #: article/templates/article/new_article.html:12
 #: article/templates/article/new_article.html:23
 msgctxt "article"
 msgid "Новая статья"
-msgstr ""
+msgstr "Новај чланак"
 
 #: article/templates/article/new_article.html:68
 msgctxt "article"
 msgid "Заголовок статьи"
-msgstr ""
+msgstr "Наслов чланка"
 
 #: article/templates/article/new_article.html:91
 msgctxt "article"
 msgid "опубликовать"
-msgstr ""
+msgstr "објавити"
 
 #: article/views/article_rated_list.py:44
 msgctxt "article"
 msgid "Лайкнувшие статью"
-msgstr ""
+msgstr "Лајковали чланак"
 
 #: article/views/article_rated_list.py:49
 msgctxt "article"
 msgid "Дизлайкнувшие статью"
-msgstr ""
+msgstr "Дизлајковали чланак"
 
 #: article/views/article_rated_list.py:57
 #: player/templatetags/redesign/skill_top/endurance_top.py:55
@@ -477,7 +478,7 @@ msgstr ""
 #: war/views/open_war_side_list.py:80
 msgctxt "lists"
 msgid "Аватар"
-msgstr ""
+msgstr "Аватар"
 
 #: article/views/article_rated_list.py:62
 #: article/views/article_rated_list.py:63
@@ -499,7 +500,7 @@ msgstr ""
 #: war/views/open_war_side_list.py:86
 msgctxt "lists"
 msgid "Никнейм"
-msgstr ""
+msgstr "Никнејм"
 
 #: article/views/article_rated_list.py:71
 #: party/templatetags/redesign/tops/factory_top.py:77
@@ -514,7 +515,7 @@ msgstr ""
 #: war/views/open_war_side_list.py:100
 msgctxt "lists"
 msgid "Герб"
-msgstr ""
+msgstr "Грб"
 
 #: article/views/article_rated_list.py:76
 #: article/views/article_rated_list.py:77
@@ -535,34 +536,34 @@ msgstr ""
 #: war/views/open_war_side_list.py:106
 msgctxt "lists"
 msgid "Партия"
-msgstr ""
+msgstr "Партија"
 
 #: article/views/change_article.py:23 article/views/change_article.py:34
 #: article/views/change_article.py:42 article/views/change_article.py:54
 #: article/views/change_article.py:74 bill/views/bills/vote_bill.py:132
 msgctxt "change_article"
 msgid "Редактировать статью"
-msgstr ""
+msgstr "Уредити чланак"
 
 #: article/views/change_article.py:25
 msgctxt "change_article"
 msgid "ID статьи не передан"
-msgstr ""
+msgstr "ID чланка није послат"
 
 #: article/views/change_article.py:36
 msgctxt "change_article"
 msgid "ID статьи должно быть целым числом"
-msgstr ""
+msgstr "ID чланка мора бити целобројна вредност"
 
 #: article/views/change_article.py:44
 msgctxt "change_article"
 msgid "Неизвестная статья"
-msgstr ""
+msgstr "Непознати чланак"
 
 #: article/views/change_article.py:56
 msgctxt "change_article"
 msgid "Текст статьи не должен быть пустым"
-msgstr ""
+msgstr "Текст чланка не може бити празан"
 
 #: article/views/change_article.py:73 article/views/create_article.py:118
 #: article/views/subscription.py:71 article/views/vote_article.py:73
@@ -579,74 +580,74 @@ msgstr ""
 #: war/views/start_war.py:102
 msgctxt "core"
 msgid "Ошибка типа запроса"
-msgstr ""
+msgstr "Грешка у типу захтева"
 
 #: article/views/character_articles.py:38
 #, python-format
 msgctxt "article"
 msgid "Статьи: %(nickname)s"
-msgstr ""
+msgstr "Чланци: %(nickname)s"
 
 #: article/views/create_article.py:67 article/views/create_article.py:76
 #: article/views/create_article.py:86 article/views/create_article.py:119
 #: article/views/new_article.py:27
 msgctxt "new_article"
 msgid "Новая статья"
-msgstr ""
+msgstr "Новај чланак"
 
 #: article/views/create_article.py:69
 #, python-format
 msgctxt "new_article"
 msgid "Вы достигли ограничения на число статей - %(limit)s штук"
-msgstr ""
+msgstr "Достигли сте ограничења броја чланака - %(limit)s комада"
 
 #: article/views/create_article.py:78
 msgctxt "new_article"
 msgid "Название статьи не должно быть пустым"
-msgstr ""
+msgstr "Наслов чланака не може бити празан"
 
 #: article/views/create_article.py:88
 msgctxt "new_article"
 msgid "Текст статьи не должен быть пустым"
-msgstr ""
+msgstr "Текст чланка не може бити празан"
 
 #: article/views/edit_article.py:32
 #, python-format
 msgctxt "article"
 msgid "Редактировать: %(title)s"
-msgstr ""
+msgstr "Уредити: %(title)s"
 
 #: article/views/subscription.py:29 article/views/subscription.py:63
 #: article/views/subscription.py:72
 msgctxt "author_sub"
 msgid "Подписка"
-msgstr ""
+msgstr "Претплата"
 
 #: article/views/subscription.py:31
 msgctxt "author_sub"
 msgid "ID автора должно быть целым числом"
-msgstr ""
+msgstr "ID аутора мора бити цео број"
 
 #: article/views/subscription.py:62
 msgctxt "author_sub"
 msgid "Нет такого автора"
-msgstr ""
+msgstr "Нема таквог аутора"
 
 #: article/views/vote_article.py:46
 msgctxt "vote_article"
 msgid "Не выбрана оценка статьи"
-msgstr ""
+msgstr "Није одабрана оцена чланка"
 
 #: article/views/vote_article.py:47 article/views/vote_article.py:65
 #: article/views/vote_article.py:74
 msgctxt "vote_article"
 msgid "Оценить статью"
-msgstr ""
+msgstr "Оценити чланак"
 
 #: article/views/vote_article.py:64
 msgctxt "vote_article"
 msgid "Нет такой статьи"
-msgstr ""
+msgstr "Нема таквог чланка"
 
 #: bill/models/change_coat.py:33 bill/models/change_coat.py:42
 #: bill/models/change_form.py:46 bill/models/change_form.py:60
@@ -702,7 +703,7 @@ msgstr ""
 #: bill/views/bills/new_bill.py:70 bill/views/bills/new_bill.py:78
 msgctxt "new_bill"
 msgid "Новый законопроект"
-msgstr ""
+msgstr "Нови закон"
 
 #: bill/models/change_coat.py:35 bill/models/change_form.py:48
 #: bill/models/change_residency.py:56 bill/models/change_taxes.py:66
@@ -714,32 +715,32 @@ msgstr ""
 #: bill/models/transfer_resources.py:87
 msgctxt "new_bill"
 msgid "Ограничение: не более одного законопроекта данного типа"
-msgstr ""
+msgstr "Ограничење: не више од једног закона овог типа"
 
 #: bill/models/change_coat.py:44
 msgctxt "new_bill"
 msgid "Ошибка формы нового герба"
-msgstr ""
+msgstr "Грешка у форми новог грба"
 
 #: bill/models/change_coat.py:180
 msgctxt "new_bill"
 msgid "Новый герб государства"
-msgstr ""
+msgstr "Нови грб државе"
 
 #: bill/models/change_coat.py:181
 msgctxt "new_bill"
 msgid "Смена гербов государств"
-msgstr ""
+msgstr "Промена грбова држава"
 
 #: bill/models/change_form.py:25
 msgctxt "new_bill"
 msgid "Временное правительство"
-msgstr ""
+msgstr "Привремена влада"
 
 #: bill/models/change_form.py:26
 msgctxt "new_bill"
 msgid "Президентская республика"
-msgstr ""
+msgstr "Председничка република"
 
 #: bill/models/change_form.py:62
 msgctxt "new_bill"
@@ -4238,44 +4239,56 @@ msgctxt "medals"
 msgid "Выдаётся в каждую годовщину игры в WP"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:65
+#: player/templates/player/redesign/customization/view_medals.html:66
 msgctxt "medals"
 msgid "За альфа-тест Wild Politics"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:66
+#: player/templates/player/redesign/customization/view_medals.html:67
 msgctxt "medals"
 msgid "Выдаётся игрокам, игравшим в WP до 3.11.2018"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:108
+#: player/templates/player/redesign/customization/view_medals.html:109
 msgctxt "medals"
 msgid "За бета-тест Wild Politics"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:109
+#: player/templates/player/redesign/customization/view_medals.html:110
 msgctxt "medals"
 msgid "Выдаётся игрокам, игравшим в WP до 28.09.2020"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:152
+#: player/templates/player/redesign/customization/view_medals.html:153
 msgctxt "medals"
 msgid "За открытый тест Wild Politics"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:153
+#: player/templates/player/redesign/customization/view_medals.html:154
 msgctxt "medals"
 msgid "Выдаётся игрокам, игравшим в WP с 9.09.2021"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:202
+#: player/templates/player/redesign/customization/view_medals.html:203
 msgctxt "medals"
 msgid "За нанесение урона в боях"
 msgstr ""
 
-#: player/templates/player/redesign/customization/view_medals.html:203
+#: player/templates/player/redesign/customization/view_medals.html:204
 msgctxt "medals"
 msgid "Выдаётся за каждый миллион урона, нанесённый игроком"
+msgstr ""
+
+#: player/templates/player/redesign/customization/view_medals.html:254
+msgctxt "medals"
+msgid "За перевод игры"
+msgstr ""
+
+#: player/templates/player/redesign/customization/view_medals.html:255
+msgctxt "medals"
+msgid ""
+"Выдаётся за выполненный перевод проекта, или активное участие в его "
+"исправлении"
 msgstr ""
 
 #: player/templates/player/redesign/game_event/halloween.html:128
